--- a/RMIServer/nbproject/project.properties
+++ b/RMIServer/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/RMIServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.RMI.jar=C:\\Priyank Data\\Portsmouth University\\Network Security Application\\NetworkLatestCode\\RMI\\dist\\RMI.jar
+file.reference.RMI.jar=../RMI/dist/RMI.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
