--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,32 @@ local.properties
 # PDT-specific
 .buildpath
 
+#################
+##NetBeans
+#################
+
+#ant specific
+dist/
+build/
+ 
+#netbeans specific
+core
+nbproject/*
+!nbproject/project.properties
+!nbproject/project.xml
+ 
+#java specific
+*.class
+ 
+#general swap/backup files
+*.so
+*.log
+*.out
+*~
+*.swp
+*.DS_Store
+*.lock
+
 
 #################
 ## Visual Studio
