--- a/RMIServer/nbproject/project.properties
+++ b/RMIServer/nbproject/project.properties
@@ -66,7 +66,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=rmiserver.RMIServer
+main.class=RMIServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
