--- a/RMIServer/nbproject/project.properties
+++ b/RMIServer/nbproject/project.properties
@@ -66,10 +66,11 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=RMIServer
+main.class=rmiserver.RMIServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
