--- a/RMI/nbproject/private/private.properties
+++ b/RMI/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=\\\\na1b\\uj\\UP662319\\AppData\\NetBeans\\8.0.1\\build.properties
+user.properties.file=\\\\na1b\\ur\\UP705759\\AppData\\NetBeans\\8.0.1\\build.properties
